# syphakie

./: .env.example  .gitignore  alembic.ini  requirements.txt
app/: config.py  main.py
app/api/: admin.py  auth.py  billing.py  cache.py  credits.py  deps.py  experiments.py  finetune.py  generate.py  jobs.py  leaderboard.py  models.py  notifications.py  orgs.py  outputs.py  pipelines.py  proxy.py  templates.py  usage.py  webhooks.py
app/core/: exceptions.py
app/db/: session.py
app/middleware/: rate_limit.py
app/models/: __init__.py  ab_experiment.py  api_key.py  audit_log.py  credit.py  credit_transaction.py  finetune_job.py  job.py  model_rating.py  model_registry.py  notification.py  organization.py  pipeline.py  prompt_cache.py  prompt_template.py  request_record.py  telegram_auth_token.py  telegram_connection.py  telegram_state.py  usage_log.py  user.py  user_provider_key.py  webhook.py
app/providers/: __init__.py  anthropic_adapter.py  base.py  elevenlabs_adapter.py  fal_adapter.py  google_adapter.py  openai_adapter.py  qwen_adapter.py  stability_adapter.py  xai_adapter.py
app/routing/: config.py  engine.py  scorer.py
app/schemas/: generate.py
app/services/: credits.py  generate.py  outputs.py  provider_keys.py  usage.py
docs/: implementation_plan.md  scale_up_plan.md
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: bootstrap.py  seed.py  test_adapter.py  test_e2e.py  test_routing.py  test_scorer.py  update_latency.py
sdk/python/: pyproject.toml
sdk/python/syphakie/: __init__.py  client.py  exceptions.py
(+63 files in other folders)
