[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syphakie"
version = "0.1.0"
description = "SyphaKie Python SDK — unified AI model aggregator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
async = ["httpx[asyncio]>=0.27"]

[project.urls]
Homepage = "https://syphakie.com"
Repository = "https://github.com/syphakie/syphakie-python"
